--- a/desktop/src/index.css
+++ b/desktop/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.selectedLink {
+  color: #DE0A1A;
+}
+
+.center {
+  text-align: center;
+  align-self: center;
+}
